# node-webcodecs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  binding.gyp  context7.json  docs.json  index.html  jest.config.js  llms-full.txt  llms.txt  mediabunny.mjs  package-lock.json  package.json
.beads/: issues.jsonl  spec-compliance-bugs.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  prebuild.yml
.vercel/: project.json
benchmark/: event-loop-blocking.ts
docs/: docs.json  introduction.mdx  package.json
docs/api-reference/: AudioData.mdx  AudioDecoder.mdx  AudioEncoder.mdx  EncodedAudioChunk.mdx  EncodedVideoChunk.mdx  ImageDecoder.mdx  README.mdx  VideoColorSpace.mdx  VideoDecoder.mdx  VideoEncoder.mdx  VideoFrame.mdx  codec-registry.mdx  index.mdx  native.mdx  types.mdx
docs/cookbook/: overview.mdx  thumbnails.mdx  transcode.mdx  video-validation.mdx  watermark.mdx  webrtc-recording.mdx
docs/examples/: alpha-video.mdx  basic-encoding.mdx  hdr-encoding.mdx  real-world.mdx
docs/getting-started/: first-decode.mdx  installation.mdx  quick-start.mdx
docs/guides/: alpha-channels.mdx  backpressure.mdx  hardware-acceleration.mdx  hdr-encoding.mdx  worker-threads.mdx
docs/migration/: from-browser.mdx  from-ffmpeg-cli.mdx
docs/troubleshooting/: overview.mdx
examples/: test-alpha-debug.js  test-alpha-enc-debug.js  test-alpha-native-debug.js  test-alpha-playable.js  test-alpha.js  test-colorspace-all.js  test-colorspace-hdr.js  test-copyto-visual.js  test-copyto.js  test-svc.js
native/: async_decoder.cpp  async_decoder.h  async_encoder.cpp  async_encoder.h  audio.cpp  binding.cpp  capability_probe.cpp  capability_probe.h  color.cpp  color.h  decoder.cpp  encoder.cpp  encoder.h  env_state.h  frame.cpp  frame.h  hw_accel.cpp  image_decoder.cpp  image_decoder.h  svc.cpp  svc.h
scripts/: install.js  make-static-package.js
scripts/ffmpeg-static/: build.sh
src/: AudioData.ts  AudioDecoder.ts  AudioEncoder.ts  ImageDecoder.ts  VideoDecoder.ts  VideoEncoder.ts  VideoFrame.ts  index.ts  mediabunny.ts  native.ts  register.ts
test/: video-encoder.test.ts
test/integration/: encode-decode.test.js  hevc-av1-encode-decode.test.js
test/spec-compliance/: functional.test.ts  qr-roundtrip.test.ts
thoughts/shared/plans/: 2025-12-01-extended-api-coverage.md  2025-12-02-worker-thread-and-api-improvements.md
